# airflow

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
dags/: dag_linkedin_drogheda_jobs.py  dag_linkedin_processing.py  dag_linkedin_scraping.py  dag_volcanic_sitemap_jobs.py  hello_airflow.py
plugins/: linkedin_config.py  linkedin_operator.py  mongo_connection_bootstrap.py  volcanic_operator.py
plugins/ai/agents/: CV.md  CV_general_ops_ireland.md  job_application_templates_drogheda.md  job_matcher.py
