[tool.poetry]
name = "airflow-docker-project"
version = "0.1.0"
description = "Projeto Airflow com Docker e Poetry"
authors = ["ozolsvoz <dev@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
scrapy = "^2.14.1"
apache-airflow-providers-mongo = "^5.3.2"
pydantic-ai = "^1.63.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
